--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.5.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
