--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "firebase": "^8.9.0",
     "foundation": "^4.2.1-1",
     "foundation-sites": "^6.6.3",
     "node-sass": "^6.0.1",
