--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "firebase": "^8.9.0",
+    "firebase-tools": "^9.16.3",
     "foundation": "^4.2.1-1",
     "foundation-sites": "^6.6.3",
     "node-sass": "^6.0.1",
